[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/Inventory.gd" type="Script" id=1]
[ext_resource path="res://assets/inventoryLabel.png" type="Texture" id=2]
[ext_resource path="res://assets/platels1.png" type="Texture" id=3]
[ext_resource path="res://assets/inventoryEquipment.png" type="Texture" id=4]
[ext_resource path="res://assets/inventoryMain.png" type="Texture" id=5]
[ext_resource path="res://assets/itemSlot.png" type="Texture" id=6]
[ext_resource path="res://scripts/Slot.gd" type="Script" id=7]
[ext_resource path="res://assets/market_back1.png" type="Texture" id=8]
[ext_resource path="res://assets/market_back2.png" type="Texture" id=9]
[ext_resource path="res://assets/coin.png" type="Texture" id=10]
[ext_resource path="res://fonts/font16Big.fnt" type="BitmapFont" id=11]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 6 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="Inventory" type="Node2D"]

process/pause_mode = 2
z/z = 10
script/script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 3
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="ColorFrame" type="ColorFrame" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
color = Color( 0, 0.0705882, 1, 1 )

[node name="InventoryLabel" type="Sprite" parent="CanvasLayer"]

transform/pos = Vector2( 640, 108 )
texture = ExtResource( 2 )

[node name="PlatelsContainer" type="Sprite" parent="CanvasLayer"]

transform/pos = Vector2( 190, 440 )
texture = ExtResource( 3 )

[node name="EquipmentContainer" type="Sprite" parent="CanvasLayer"]

transform/pos = Vector2( 1090, 440 )
texture = ExtResource( 4 )

[node name="ItemsContainer" type="Sprite" parent="CanvasLayer"]

transform/pos = Vector2( 640, 440 )
texture = ExtResource( 5 )

[node name="ItemsGrid" type="GridContainer" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 416.0
margin/top = 274.0
margin/right = 861.0
margin/bottom = 612.0
custom_constants/vseparation = 19
custom_constants/hseparation = 15
columns = 4

[node name="Slot1" type="Panel" parent="CanvasLayer/ItemsGrid"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 100.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 7 )

[node name="Slot2" type="Panel" parent="CanvasLayer/ItemsGrid"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 115.0
margin/top = 0.0
margin/right = 215.0
margin/bottom = 100.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 7 )

[node name="Slot3" type="Panel" parent="CanvasLayer/ItemsGrid"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 230.0
margin/top = 0.0
margin/right = 330.0
margin/bottom = 100.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 7 )

[node name="Slot4" type="Panel" parent="CanvasLayer/ItemsGrid"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 345.0
margin/top = 0.0
margin/right = 445.0
margin/bottom = 100.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 7 )

[node name="Slot5" type="Panel" parent="CanvasLayer/ItemsGrid"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 119.0
margin/right = 100.0
margin/bottom = 219.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 7 )

[node name="Slot6" type="Panel" parent="CanvasLayer/ItemsGrid"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 115.0
margin/top = 119.0
margin/right = 215.0
margin/bottom = 219.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 7 )

[node name="Slot7" type="Panel" parent="CanvasLayer/ItemsGrid"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 230.0
margin/top = 119.0
margin/right = 330.0
margin/bottom = 219.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 7 )

[node name="Slot8" type="Panel" parent="CanvasLayer/ItemsGrid"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 345.0
margin/top = 119.0
margin/right = 445.0
margin/bottom = 219.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 7 )

[node name="Slot9" type="Panel" parent="CanvasLayer/ItemsGrid"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 238.0
margin/right = 100.0
margin/bottom = 338.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 7 )

[node name="Slot10" type="Panel" parent="CanvasLayer/ItemsGrid"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 115.0
margin/top = 238.0
margin/right = 215.0
margin/bottom = 338.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 7 )

[node name="Slot11" type="Panel" parent="CanvasLayer/ItemsGrid"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 230.0
margin/top = 238.0
margin/right = 330.0
margin/bottom = 338.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 7 )

[node name="Slot12" type="Panel" parent="CanvasLayer/ItemsGrid"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 345.0
margin/top = 238.0
margin/right = 445.0
margin/bottom = 338.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 7 )

[node name="BackButton" type="TextureButton" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 72.0
margin/right = 258.0
margin/bottom = 144.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="coin" type="Sprite" parent="CanvasLayer"]

transform/pos = Vector2( 994, 108 )
transform/scale = Vector2( 2.5, 2.75 )
texture = ExtResource( 10 )

[node name="CoinNumber" type="Label" parent="CanvasLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1058.0
margin/top = 72.0
margin/right = 1186.0
margin/bottom = 144.0
custom_fonts/font = ExtResource( 11 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="input_event" from="CanvasLayer/ItemsGrid/Slot1" to="." method="_on_Slot1_input_event"]

[connection signal="input_event" from="CanvasLayer/ItemsGrid/Slot2" to="." method="_on_Slot2_input_event"]

[connection signal="input_event" from="CanvasLayer/ItemsGrid/Slot3" to="." method="_on_Slot3_input_event"]

[connection signal="input_event" from="CanvasLayer/ItemsGrid/Slot4" to="." method="_on_Slot4_input_event"]

[connection signal="input_event" from="CanvasLayer/ItemsGrid/Slot5" to="." method="_on_Slot5_input_event"]

[connection signal="input_event" from="CanvasLayer/ItemsGrid/Slot6" to="." method="_on_Slot6_input_event"]

[connection signal="input_event" from="CanvasLayer/ItemsGrid/Slot7" to="." method="_on_Slot7_input_event"]

[connection signal="input_event" from="CanvasLayer/ItemsGrid/Slot8" to="." method="_on_Slot8_input_event"]

[connection signal="input_event" from="CanvasLayer/ItemsGrid/Slot9" to="." method="_on_Slot9_input_event"]

[connection signal="input_event" from="CanvasLayer/ItemsGrid/Slot10" to="." method="_on_Slot10_input_event"]

[connection signal="input_event" from="CanvasLayer/ItemsGrid/Slot11" to="." method="_on_Slot11_input_event"]

[connection signal="input_event" from="CanvasLayer/ItemsGrid/Slot12" to="." method="_on_Slot12_input_event"]

[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_BackButton_pressed"]


